fixed info spacing

--- a/web/front/style/style.css
+++ b/web/front/style/style.css
@@ -260,6 +260,11 @@
         grid-row-gap: 15px;
     }
     
+    .settings {
+        display: flex;
+        margin: 20px;
+    }
+    
     .center__input {
         padding: 20px;
         border-radius: 10px;
@@ -620,11 +625,9 @@
     
     .info {
         font-family: Arial, Helvetica, sans-serif;
-        margin: auto;
         justify-content: center;
         align-items: center;
-        display: flex;
-        align-items: center;
+        display: flexbox;
         float: left;
         height: 800px;
         width: 60%;
